# Research_Web_Scraping_OpenAI

./: 0_start_scrape_JSON.py  1_Create_Many_Reports.py  2_OAIS_JSON.py  3_web_scraper_multithreaded.py  README.md  input_websites.csv  pyproject.toml
Genereated_Website_CSV/: input_websites.csv
