[tool.poetry]
name = "company_research_Web_Scraping"
version = "0.1.0"
description = "A project for web scraping and analyzing content using OpenAI API."
authors = ["lachiemcg <lwkmcgregor@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
reportlab = "^3.6.13"  # Replace this version with the latest available version if necessary
openai = "^0.28.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
selenium = "^4.11.0"
pandas = "^2.2.2"  

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
web-scraper = "web_scraper_multithreaded:main"
analyzer = "analyze_scraped_content:main"

